# animus-link

./: .codexignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
.animus-link/state/: a.json  b.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  desktop-build.yml  release.yml  security.yml
apps/: AGENTS.md
apps/chat-gui-python/: README.md  chat_gui.py
apps/conformance-runner/: Cargo.toml
apps/conformance-runner/src/: main.rs
apps/design-token-gen/: Cargo.toml
apps/design-token-gen/src/: main.rs
apps/fabric-cli/: Cargo.toml
apps/fabric-cli/src/: main.rs
apps/link-cli/: Cargo.toml
apps/link-cli/src/: client.rs  cmd_info.rs  cmd_invite.rs  cmd_mesh.rs  cmd_messenger.rs  cmd_node.rs  cmd_relay.rs  cmd_service.rs  cmd_tunnel.rs  errors.rs  main.rs  output.rs
apps/link-cli/tests/: cli_integration.rs
apps/link-daemon/: Cargo.toml
apps/link-daemon/src/: api.rs  control_store.rs  daemon.rs  diagnostics.rs  errors.rs  invite.rs  lib.rs  main.rs  mesh_runtime.rs  namespace_store.rs  relay_token.rs
apps/link-desktop/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
apps/link-desktop/src/: styles.css
apps/link-desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/link-desktop/src-tauri/capabilities/: default.json
apps/link-desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs
apps/relay-server/: Cargo.toml
apps/relay-server/src/: lib.rs  main.rs  observability.rs  relay.rs  token.rs
codex/: README.md
codex/agents/: 00_repo_rules.md  10_wire_agent.md  20_crypto_agent.md  30_session_agent.md  40_relay_agent.md  50_link_agent.md
codex/prompts/: security_policy.md  system.md
codex/tasks/: MVP_CHECKLIST.md  TASKS_node_security.md
configs/: fabric.example.toml  link.example.toml  relay.example.toml
conformance/: README.md
conformance/schema/: vectors.schema.json
conformance/vectors/: anti_replay_window.json  discovery_records.json  framing_aead.json  handshake_noise_xx.json  relay_ctrl.json
crates/: AGENTS.md
crates/fabric/: Cargo.toml
crates/fabric-crypto/: Cargo.toml
crates/fabric-crypto/src/: aead.rs  errors.rs  lib.rs  noise_xx.rs  signatures.rs
crates/fabric-discovery/: Cargo.toml
crates/fabric-discovery/src/: errors.rs  lib.rs  record.rs
crates/fabric-ffi/: Cargo.toml  build.rs  uniffi.toml
crates/fabric-ffi/src/: api.rs  errors.rs  fabric.udl  lib.rs
crates/fabric-identity/: Cargo.toml
crates/fabric-identity/src/: errors.rs  keystore.rs  keystore_android.rs  keystore_ios.rs  keystore_linux.rs  keystore_macos.rs  keystore_windows.rs  lib.rs
crates/fabric-nat/: Cargo.toml
crates/fabric-nat/src/: errors.rs  (+1 more)
crates/fabric-relay-client/: Cargo.toml
crates/fabric-relay-proto/: Cargo.toml
crates/fabric-security/: Cargo.toml
crates/fabric-service/: Cargo.toml
crates/fabric-session/: Cargo.toml
crates/fabric-session/src/: cipher.rs  errors.rs  lib.rs  limits.rs  mux.rs  ratelimit.rs  relay_channel.rs  replay.rs  secure_session.rs  state_machine.rs
crates/fabric-session/tests/: relay_e2e.rs
crates/fabric-transport/: Cargo.toml
crates/fabric-tunnel-proto/: Cargo.toml
crates/fabric-wire/: Cargo.toml
crates/link-gateway/: Cargo.toml
crates/link-tunnel-client/: Cargo.toml
crates/link-tunnel-client/src/: client.rs  lib.rs  route.rs  state.rs  tun.rs
deploy/: .env.relay.example  README.md  docker-compose.yml
deploy/relay/: Dockerfile
deploy/systemd/: animus-link-bootstrap.env.example  animus-link-bootstrap.service
design/: README.md  tokens.json
docs/: README.md  debug-matrix.md  desktop-development.md  desktop-release-signing.md  desktop-sidecar-model.md  how-to-verify-release.md  known-limitations.md  positioning.md  public-beta-faq.md  public-beta-runbook.md
messanger/: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc.cjs  Dockerfile  MIGRATION.md  Makefile  README.md  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
messanger/.next/: app-build-manifest.json  trace
messanger/_generated/: claim_map_report.md  docs_diff_report.md  docs_ia.md  docs_nav_tree.json  docs_traceability.md  landing_copy.json  landing_copy.md  red_flags.md  traceability_matrix.md
messanger/app/: global-error.tsx  layout.tsx  not-found.tsx  page.tsx  providers.tsx
messanger/config/: site.ts
messanger/deploy/: docker-compose.yml
messanger/docs/: site-ui-audit.md  site.md  ui-parity-checklist.md
messanger/lib/: clipboard.ts  contact.ts  docs-content.ts  docs-search.ts  github-metrics.ts  i18n.ts  live-metrics-schema.ts  live-metrics-types.ts  marketing-data.ts  regression-data.ts  regression-repo.ts  regression-schema.ts  regression-score.ts  regression-types.ts  seo.ts  site-locale.ts  site-metadata.ts  site-request-locale.ts  site-text.ts  site-translations.ts
messanger/metrics-publisher-template/: README.md
messanger/scripts/: build-search-index.mjs  clean.mjs  entrypoint.sh  start-client.ps1  validate-env.mjs
messanger/styles/: globals.css
messanger/tests/: github-only-metrics.test.js  i18n-hardcoded-strings.test.js  live-metrics-schema.test.js  locale-routing.test.js  metrics-parsing.test.js  metrics-publisher-template.test.js  regression-score.test.js  research-home-i18n.test.js  routes-smoke.test.js  viz-panel-contract.test.js
mobile/android/: README.md  gradlew  gradlew.bat  settings.gradle.kts
mobile/ios/: README.md
scripts/: README.md  bootstrap.sh  check.sh  demo-relay-first-e2e.sh  gen-tokens-android.kt  gen-tokens-ios.swift  gen-tokens-web.ts  launch-verify.sh  prepare-desktop-sidecar.sh  verify-android.sh  verify-desktop.sh  verify-full-tunnel-linux.sh  verify-ios-build.sh  verify-release-artifacts.sh
spec/: README.md  crypto.md  discovery.md  full-tunnel.md  glossary.md  identity.md  node-security.md  platform-support.md  relay.md  service-layer.md  state-machine.md  test-vectors.md  versioning.md  wire.md
tests/: README.md
(+200 files in other folders)
