    [package]
    name = "fabric-crypto"
    version = "0.1.0"
    edition = "2021"
    license = "Apache-2.0"

    [lib]

[dependencies]
chacha20poly1305 = "0.10"
ed25519-dalek = "2"
hkdf = "0.12"
rand_core = "0.6"
sha2 = "0.10"
thiserror = "1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = "1"
