[package]
name = "link-tunnel-client"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]

[dependencies]
fabric-crypto = { path = "../fabric-crypto" }
fabric-relay-proto = { path = "../fabric-relay-proto" }
fabric-session = { path = "../fabric-session" }
fabric-tunnel-proto = { path = "../fabric-tunnel-proto" }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tracing = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"
