[package]
name = "link-desktop"
version = "0.1.0"
edition = "2021"
description = "Animus Link Desktop shell"
authors = ["Animus"]

[lib]
name = "link_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1" }

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.4", features = ["tray-icon"] }
tauri-plugin-http = "2.0.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "process", "fs", "net", "io-util", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace]
